bug fix catalogue vendeur

--- a/Projet Web Commerce/Views/MainMenu/Catalogue.cshtml
+++ b/Projet Web Commerce/Views/MainMenu/Catalogue.cshtml
@@ -92,7 +92,7 @@ else
                             if (group.Key != null)
                             {
                                 <a asp-controller="MainMenu"
-                                   asp-route-id="@group.Key"
+                                   asp-route-nomAffaire="@group.Key"
                                    asp-action="CatalogueVendeur">
                                     @group.Key (@group.Count())
                                 </a>
