--- a/Projet Web Commerce/Views/Shared/_LoginPartial.cshtml
+++ b/Projet Web Commerce/Views/Shared/_LoginPartial.cshtml
@@ -47,7 +47,7 @@
             }
 
             <li class="nav-item">
-                <a class="nav-link" asp-area="" asp-controller="EmailSender" asp-action="Index" style="color: rgb(249, 229, 71)">Messagerie</a>
+                <a class="nav-link" asp-area="" asp-controller="Messagerie" asp-action="BoiteDeReception" style="color: rgb(249, 229, 71)">Messagerie</a>
             </li>
 
             if ((estDansRole = await UserManager.IsInRoleAsync(user, "Client")))
