--- a/Projet Web Commerce/Views/Panier/Index.cshtml
+++ b/Projet Web Commerce/Views/Panier/Index.cshtml
@@ -231,15 +231,25 @@
                                         </div>
 
                                         <div class="text-center">
-                                            <form asp-controller="Panier" id="formAjoutPanier" asp-action="ConfirmerCommande" method="get">
 
-                                                <input type="hidden" name="NoVendeur" value="@vendeur.NoVendeur" />
-                                                <input type="hidden" name="NoClient" value="@client.NoClient" />
+                                            @if (totalPoids < vendeur.PoidsMaxLivraison)
+                                            {
+                                                <form asp-controller="Commande" id="formAjoutPanier" asp-action="ConfirmerCommande" method="post">
 
-                                                <button type="submit" class="btn btn-dark btn-lg" data-mdb-ripple-color="dark">
-                                                    Passer à la commande
-                                                </button>
-                                            </form>
+                                                    <input type="hidden" name="NoVendeur" value="@vendeur.NoVendeur" />
+                                                    <input type="hidden" name="NoClient" value="@client.NoClient" />
+
+                                                    <button type="submit" class="btn btn-dark btn-lg" data-mdb-ripple-color="dark">
+                                                        Passer à la commande
+                                                    </button>
+                                                </form>
+                                            }
+                                            else
+                                            {
+                                                <h5 class="text-uppercase" style="color:red; font-size:15px">Votre commande dépasse le poids maximal pour la livraison. Assurez vous que le poids total de votre commande est sous @vendeur.PoidsMaxLivraison Kg</h5>
+
+                                            }
+
                                         </div>
                                     </div>
                                 </div>
