--- a/Projet Web Commerce/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/Projet Web Commerce/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -17,7 +17,9 @@
     {
 <p>
         Veuillez vérifier votre courrier électronique pour confirmer votre compte.
+            
 </p>
+        <a asp-area="Identity" asp-page="/Account/Login"> Retour à la page de connexion </a>
     }
 }
 
