--- a/Projet Web Commerce/Views/PPGestionnaires/ListeVendeurs.cshtml
+++ b/Projet Web Commerce/Views/PPGestionnaires/ListeVendeurs.cshtml
@@ -19,7 +19,18 @@
                 {
                     <div class="card">
                         <div class="card-body">
-                            <h4 class="card-title"><u>@date.Mois/@date.Annee</u></h4>
+                            <script>
+                                function getMonthName(monthNumber) {
+                                    const months = ["Janvier", "Février", "Mars", "Avril", "Mai", "Juin", "Juillet", "Août", "Septembre", "Octobre", "Novembre", "Décembre"];
+                                    return months[monthNumber - 1];
+                                }
+
+                                const monthNumber = @date.Mois;
+                                const year = @date.Annee;
+                                const monthName = getMonthName(monthNumber);
+
+                                document.write('<h4 class="card-title"><u>' + monthName + ' ' + year + '</u></h4>');
+                            </script>
                             @{
                                 var groupeParAnnee = Model.VendeursList
                                 .Where(item => item.DateCreation.Month == date.Mois && item.DateCreation.Year == date.Annee)
@@ -29,8 +40,8 @@
                                 <thead>
                                     <tr>
                                         <th scope="col">#</th>
-                                        <th scope="col">No de vendeur</th>
-                                        <th scope="col">Courriel</th>
+                                        <th scope="col">No de vendeur</th>                                        
+                                        <th scope="col">Information personnelle</th>
                                         <th scope="col">Nom d'affaires</th>
                                         <th scope="col">Date de création</th>
                                         <th scope="col">Nb de produits inscrits</th>
@@ -45,7 +56,15 @@
                                         <tr>
                                             <td>@(++no)</td>
                                             <td>@Html.DisplayFor(modelItem => item.NoVendeur)</td>
-                                            <td>@Html.DisplayFor(modelItem => item.AdresseEmail)</td>
+                                            @if(item.Nom != null && item.Prenom != null)
+                                            {
+                                                <td>@Html.DisplayFor(modelItem => item.Nom), @Html.DisplayFor(modelItem => item.Prenom)</td>
+                                            }
+                                            else
+                                            {
+                                                <td>@Html.DisplayFor(modelItem => item.AdresseEmail)</td>
+                                            }
+                                            
                                             <td>@Html.DisplayFor(modelItem => item.NomAffaires)</td>
                                             <td>@Html.DisplayFor(modelItem => item.DateCreation)</td>
                                             <td>@Model.ProduitsList.Count(modelItem => modelItem.NoVendeur == item.NoVendeur)</td>
