--- a/Projet Web Commerce/Views/Shared/GestionVendeursPages.cshtml
+++ b/Projet Web Commerce/Views/Shared/GestionVendeursPages.cshtml
@@ -38,6 +38,11 @@
         Liste des vendeurs
     </a>
 
+    <a class="btn @(Model == "ListeClients" ? "actif" : "pasActif")"
+       asp-area="" asp-controller="PPGestionnaires" asp-action="ListeClients">
+        Liste des clients
+    </a>
+
     <a class="btn @(Model == "ListeVendeursAConfirmer" ? "actif" : "pasActif")"
        asp-area="" asp-controller="PPGestionnaires" asp-action="ListeVendeursAConfirmer">
         Liste des vendeurs à confirmer
